--- a/chat-kikou-like/src/chat/components/message-input/message-input.component.html
+++ b/chat-kikou-like/src/chat/components/message-input/message-input.component.html
@@ -1,1 +1,8 @@
-<p>message-input works!</p>
+<div class="send-message">
+  <input
+    [(ngModel)]="message"
+    (keydown.enter)="sendMessage()"
+    placeholder="Type your message here"
+  />
+  <button (click)="sendMessage()">Send Message</button>
+</div>
